ga4 script added.

--- a/index.html
+++ b/index.html
@@ -122,6 +122,15 @@
     <noscript
       ><link rel="stylesheet" href="jsonviewer/styles.e6b4c5b3807716416de1.css"
     /></noscript>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XVLC6QJXZE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-XVLC6QJXZE');
+</script>
   </head>
   <body>
     <app-root></app-root>
