--- a/index.html
+++ b/index.html
@@ -122,14 +122,14 @@
     <noscript
       ><link rel="stylesheet" href="jsonviewer/styles.e6b4c5b3807716416de1.css"
     /></noscript>
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XVLC6QJXZE"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C4MP1WHMKV"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-XVLC6QJXZE');
+  gtag('config', 'G-C4MP1WHMKV');
 </script>
   </head>
   <body>
